Liveliness and Readiness probe implemented to monitor elasticsearch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,12 @@
 #elasticsearch.port = 9200
 #elasticsearch.username = admin
 #elasticsearch.password = admin
+
+#liveness and readiness probes
+# http://localhost:9991/actuator/health/liveness
+# http://localhost:9991/actuator/health/readiness
+management.endpoints.web.exposure.include=health
+management.endpoint.health.group.readiness.include=elasticsearch
+management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
+management.server.port=9991
